Add comment about using 'eg help' to eg.html

--- a/eg.html
+++ b/eg.html
@@ -57,7 +57,9 @@ massages things...particularly the help pages).  Then run
 <blockquote>
     <b>git clone http://www.gnome.org/~newren/eg/eg.git eg</b>
 </blockquote>
-Stick the eg directory in your path and you're ready to go.
+Stick the eg directory in your path and you're ready to go.  If you aren't
+one of those shoot first and ask questions later types, just fire off an
+'eg help'.
 
 <h3>Work in progress</h3>
 
