Add an earlier warning about eg being alpha early in the webpage.

--- a/eg.html
+++ b/eg.html
@@ -1,6 +1,10 @@
 <center>Easy GIT -- <i>git for mere mortals</i></center>
 
 <p>
+<i>Warning: Easy GIT is very incomplete and slightly buggy to boot.</i>
+</p>
+
+<p>
 Easy GIT is a wrapper for <a href="http://git.or.cz/">git</a>, designed to
 make git easy to use.  It is mostly meant as a brainstorming session about
 what git could be, hopefully as a means to spark discussion about
